--- a/src/react-debugger-interface/package.json
+++ b/src/react-debugger-interface/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "deepdash": "^5.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-json-view": "^1.21.3",
