--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "ts-node index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
